# minipackage

./: README.md  pyproject.toml
minipackage/: __init__.py
