[tool.poetry]
name = "minipackage"
version = "0.0.1"
description = "A minimal python package"
authors = ["Scott Henderson <scottyhq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scottyhq/minipackage"
repository = "https://github.com/scottyhq/minipackage"
keywords = ["Python"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
